// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Segments > Segments.vue renders OXD Segments 1`] = `
<div id="segment-id" class="oxd-segments-wrapper" tabindex="0">
  <div id="segment-id_0" class="oxd-segment-wrapper d-flex align-center"><label for="1" class="oxd-segment-label d-flex align-center"><i class="oxd-svg-icon oxd-svg-icon--small"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 384 384" style="enable-background:new 0 0 384 384;" xml:space="preserve">
          <g id="Layer_2_1_">
            <g id="Layer_1-2">
              <path d="M380.5,183.6c-18.3-29.1-41.4-53.8-69.8-73.2C260.9,76.1,206,64.4,147,77.9C81.5,92.9,34.3,133.1,0,189.6l0.1,6 c1.2,2.1,2.2,4.1,3.5,6.1c20.6,32.6,46.9,59.6,79.8,79.8c46.5,28.6,96.8,38.1,150.1,26.8c67.2-14.3,115.4-54.9,150.5-112.6v-6 C382.8,187.6,381.7,185.6,380.5,183.6z M356.5,194.7c-25,35.7-56.4,63.9-97.1,80.6c-30.7,12.8-64.5,16.5-97.3,10.6 c-44.6-7.6-80.7-30.3-111.4-62.7c-8.4-8.9-16.1-18.4-23-28.5c-0.9-1.3-1.5-2.3-0.3-3.9c29.5-41.9,67-73.3,117.1-87.7 c15.5-4.5,31.5-6.4,49.5-6.5c45.5,0.3,86.1,17.7,121.6,48.2c15.4,13.3,29.1,28.6,40.7,45.4C357.2,191.7,357.8,192.8,356.5,194.7z"></path>
              <path d="M192.1,120.6c-39.7,0-72,32-72.2,71.7c0,0,0,0.1,0,0.1c-0.1,39.8,32.1,72.1,71.8,72.2c39.8,0.1,72.1-32.1,72.2-71.8 C264.1,153,231.9,120.7,192.1,120.6z M192,240.6c-26.5,0-48-21.5-48-48c0-0.1,0-0.2,0-0.3c0.2-26.4,21.6-47.7,48-47.7 c26.5,0,48,21.5,48,48C240,219.1,218.5,240.6,192,240.6z"></path>
            </g>
          </g>
        </svg> </i>Item one</label><input name="segment-group-id" id="1" type="radio" class="oxd-segment-input" modelvalue="[object Object]"></div>
  <div id="segment-id_1" class="oxd-segment-wrapper d-flex align-center"><label for="2" class="oxd-segment-label d-flex align-center"><i class="oxd-svg-icon oxd-svg-icon--xx-small"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 492 492" style="enable-background:new 0 0 492 492;" xml:space="preserve">
          <g id="Layer_2_1_">
            <g id="Layer_1-2">
              <path d="M4.1,470.3c3.6-9.1,5.2-18.9,7.6-28.3c7.5-29.6,14.8-59.3,22.2-89c0.7-2.9,2.3-5.6,4.5-7.7 c88.7-88.7,177.3-177.3,265.9-266c2.7-2.7,3.9-2.2,6.2,0.2c32.9,33.1,65.9,66,99,98.9c2.7,2.7,2.5,4-0.1,6.5 c-88.4,88.2-176.7,176.5-265,264.9c-2.5,2.6-5.8,4.5-9.4,5.4c-39,9.5-78,19.2-116.9,28.9c-0.2,0.1-0.4,0.5-0.6,0.7h-5.8 c-4-0.5-7.2-3.7-7.7-7.7V470.3z"></path>
              <path class="st0" d="M4.1,491c1.7,3.3,4.4,5.9,7.7,7.7C4.1,498.6,4.1,498.6,4.1,491z"></path>
              <path d="M481,91.1c-0.3,13.5-4.5,25.7-14,35.6c-12,12.4-24.4,24.4-36.4,36.8c-2.8,2.9-3.8,0.2-5.1-1.2 c-27.8-27.7-55.6-55.5-83.4-83.3c-5.5-5.5-11-11.1-16.6-16.5c-1.8-1.7-1.9-2.7,0-4.5c11.8-11.6,23.3-23.7,35.4-35.1 c20.3-19.3,52.5-19.7,73-0.7c11.6,10.7,22.6,22.1,33.5,33.6C476.6,65.5,480.7,77.6,481,91.1z"></path>
            </g>
          </g>
        </svg> </i>Item two</label><input name="segment-group-id" id="2" type="radio" class="oxd-segment-input" modelvalue="[object Object]"></div>
</div>
`;

exports[`Segments > Segments.vue should accept valid input 1`] = `
<div id="segment-id" class="oxd-segments-wrapper" tabindex="0">
  <div id="segment-id_0" class="oxd-segment-wrapper d-flex align-center"><label for="1" class="oxd-segment-label d-flex align-center active"><i class="oxd-svg-icon oxd-svg-icon--small"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 384 384" style="enable-background:new 0 0 384 384;" xml:space="preserve">
          <g id="Layer_2_1_">
            <g id="Layer_1-2">
              <path d="M380.5,183.6c-18.3-29.1-41.4-53.8-69.8-73.2C260.9,76.1,206,64.4,147,77.9C81.5,92.9,34.3,133.1,0,189.6l0.1,6 c1.2,2.1,2.2,4.1,3.5,6.1c20.6,32.6,46.9,59.6,79.8,79.8c46.5,28.6,96.8,38.1,150.1,26.8c67.2-14.3,115.4-54.9,150.5-112.6v-6 C382.8,187.6,381.7,185.6,380.5,183.6z M356.5,194.7c-25,35.7-56.4,63.9-97.1,80.6c-30.7,12.8-64.5,16.5-97.3,10.6 c-44.6-7.6-80.7-30.3-111.4-62.7c-8.4-8.9-16.1-18.4-23-28.5c-0.9-1.3-1.5-2.3-0.3-3.9c29.5-41.9,67-73.3,117.1-87.7 c15.5-4.5,31.5-6.4,49.5-6.5c45.5,0.3,86.1,17.7,121.6,48.2c15.4,13.3,29.1,28.6,40.7,45.4C357.2,191.7,357.8,192.8,356.5,194.7z"></path>
              <path d="M192.1,120.6c-39.7,0-72,32-72.2,71.7c0,0,0,0.1,0,0.1c-0.1,39.8,32.1,72.1,71.8,72.2c39.8,0.1,72.1-32.1,72.2-71.8 C264.1,153,231.9,120.7,192.1,120.6z M192,240.6c-26.5,0-48-21.5-48-48c0-0.1,0-0.2,0-0.3c0.2-26.4,21.6-47.7,48-47.7 c26.5,0,48,21.5,48,48C240,219.1,218.5,240.6,192,240.6z"></path>
            </g>
          </g>
        </svg> </i>Item one</label><input name="segment-group-id" id="1" type="radio" class="oxd-segment-input" modelvalue="[object Object]"></div>
  <div id="segment-id_1" class="oxd-segment-wrapper d-flex align-center"><label for="2" class="oxd-segment-label d-flex align-center"><i class="oxd-svg-icon oxd-svg-icon--xx-small"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 492 492" style="enable-background:new 0 0 492 492;" xml:space="preserve">
          <g id="Layer_2_1_">
            <g id="Layer_1-2">
              <path d="M4.1,470.3c3.6-9.1,5.2-18.9,7.6-28.3c7.5-29.6,14.8-59.3,22.2-89c0.7-2.9,2.3-5.6,4.5-7.7 c88.7-88.7,177.3-177.3,265.9-266c2.7-2.7,3.9-2.2,6.2,0.2c32.9,33.1,65.9,66,99,98.9c2.7,2.7,2.5,4-0.1,6.5 c-88.4,88.2-176.7,176.5-265,264.9c-2.5,2.6-5.8,4.5-9.4,5.4c-39,9.5-78,19.2-116.9,28.9c-0.2,0.1-0.4,0.5-0.6,0.7h-5.8 c-4-0.5-7.2-3.7-7.7-7.7V470.3z"></path>
              <path class="st0" d="M4.1,491c1.7,3.3,4.4,5.9,7.7,7.7C4.1,498.6,4.1,498.6,4.1,491z"></path>
              <path d="M481,91.1c-0.3,13.5-4.5,25.7-14,35.6c-12,12.4-24.4,24.4-36.4,36.8c-2.8,2.9-3.8,0.2-5.1-1.2 c-27.8-27.7-55.6-55.5-83.4-83.3c-5.5-5.5-11-11.1-16.6-16.5c-1.8-1.7-1.9-2.7,0-4.5c11.8-11.6,23.3-23.7,35.4-35.1 c20.3-19.3,52.5-19.7,73-0.7c11.6,10.7,22.6,22.1,33.5,33.6C476.6,65.5,480.7,77.6,481,91.1z"></path>
            </g>
          </g>
        </svg> </i>Item two</label><input name="segment-group-id" id="2" type="radio" class="oxd-segment-input" modelvalue="[object Object]"></div>
</div>
`;
